force-app/main/default/objects/NBA_Exclusion_Config__mdt/NBA_Exclusion_Config__mdt.object-meta.xml
<CustomObject>
    <label>NBA Exclusion Config</label>
    <pluralLabel>NBA Exclusion Configs</pluralLabel>
</CustomObject>