force-app/main/default/objects/NBA_Exclusion_Config__mdt/fields/Enable_Future_Follow_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>Enable_Future_Follow_Up_Date__c</fullName>
    <label>Enable Future Follow Up Date Exclusion</label>
    <defaultValue>true</defaultValue>
    <type>Checkbox</type>
    <description>If true, items with future follow-up dates will be excluded from the NBA queue.</description>
</CustomField>