force-app/main/default/objects/NBA_Exclusion_Config__mdt/fields/Enable_Next_Step_Date__c.field-meta.xml
<CustomField>
    <fullName>Enable_Next_Step_Date__c</fullName>
    <label>Enable Next Step Date Exclusion</label>
    <defaultValue>true</defaultValue>
    <type>Checkbox</type>
    <description>If true, items with future next step dates will be excluded from the NBA queue.</description>
</CustomField>