force-app/main/default/objects/NBA_Exclusion_Config__mdt/fields/Hours_Since_Last_Call__c.field-meta.xml
<CustomField>
    <fullName>Hours_Since_Last_Call__c</fullName>
    <label>Hours Since Last Call</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <description>Number of hours to wait since last call before allowing another call. Default is 48 hours.</description>
</CustomField>