force-app/main/default/objects/NBA_Exclusion_Config__mdt/fields/Opp_Status_Values_Excluded__c.field-meta.xml
<CustomField>
    <fullName>Opp_Status_Values_Excluded__c</fullName>
    <label>Opportunity Status Values Excluded</label>
    <length>255</length>
    <type>Text</type>
    <description>Comma-delimited list of opportunity stage values to exclude from NBA queue. Example: closed won - pending implementation,closed lost,ran payroll</description>
</CustomField>