force-app/main/default/objects/NBA_Exclusion_Config__mdt/fields/Payroll_Status_Values_Excluded__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Status_Values_Excluded__c</fullName>
    <label>Payroll Status Values Excluded</label>
    <length>255</length>
    <type>Text</type>
    <description>Comma-delimited list of payroll status values to exclude from NBA queue. Example: pending,processing,paid</description>
</CustomField>