force-app/main/default/objects/NBA_Exclusion_Config__mdt/fields/Time_Till_Event_Min__c.field-meta.xml
<CustomField>
    <fullName>Time_Till_Event_Min__c</fullName>
    <label>Time Till Event (Minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <description>Number of minutes before a scheduled event to exclude items from NBA queue. Default is 15 minutes.</description>
</CustomField>